add emoji comment

--- a/pages/galeriaDeImagenes.html
+++ b/pages/galeriaDeImagenes.html
@@ -201,7 +201,7 @@
           No solo estás salvando una vida, sino que también estás ganando un
           amigo fiel y amoroso. Los animales adoptados son muy agradecidos y te
           darán amor incondicional. ¡Adopta hoy y cambia tu vida para
-          siempre!🐾🐶🐱
+          siempre!🐾🐶🐱🐹
         </p>
         <h2>Selecciona a tu corazón</h2>
       </section>
